--- a/KoloLos/Views/Main/Index.cshtml
+++ b/KoloLos/Views/Main/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model dynamic
+﻿@model KoloLos.Models.HomeModel
 
 @{
     ViewBag.Title = "Home page";
@@ -11,7 +11,6 @@
                 <div class="zone zone-header">
                     <div id="branding">
                         <a href="./">
-                            tu skoczylem
                             <img src="/Content/pics/logow.png" border="0" />
                         </a>
                     </div>
@@ -28,11 +27,11 @@
                                     <a href="/aktualnosci">Aktualno&#197;&#8250;ci</a>
                                 </li>
                                 <li>
-                                    <a href="/uchwaly">Uchwa&#197;&#8218;y</a>
+                                    <a href="/uchwaly">Uchwały</a>
                                 </li>
                                 <li>
                                     <a href="/historia">Historia
-                              ko&#197;&#8218;a</a>
+                              koła</a>
                                 </li>
                                 <li>
                                     <a href="/Containers/Item/Display/20">Galeria</a>
@@ -55,8 +54,7 @@
                         <div class="ribbon-front">
                             <!-- ribbon text goes here -->
                             <div id="articleTitle">
-                                O kole
-                          &#197;&#8218;owieckim
+                                O kole łowieckim
                             </div>
                         </div>
                         <div class="ribbon-edge-topleft"></div>
@@ -67,46 +65,9 @@
                         <div class="ribbon-back-right"></div>
                     </div>
                 </header>
-                <p>
-                    Serdecznie witamy na stronie
-                    Ko&#197;&#8218;a &#197;owieckiego nr 19
-                    &#197;o&#197;&#8250; w Tarnowie wszystkich
-                    Koleg&#243;w My&#197;&#8250;liwych i
-                    sympatyk&#243;w &#197;&#8218;owiectwa.
-                </p>
-                <p>
-                    Zal&#196;&#8230;&#197;&#188;ki powstania
-                    ko&#197;&#8218;a &#197;&#8218;owieckiego
-                    &#197;o&#197;&#8250; w Tarnowie
-                    si&#196;&#8482;gaj&#196;&#8230; roku 1925,
-                    kiedy to w Zak&#197;&#8218;adach
-                    Zwi&#196;&#8230;zk&#243;w Azotowych
-                    powsta&#197;&#8218;a organizacja
-                    &#197;&#8218;owiecka, kt&#243;ra bardzo
-                    pr&#196;&#8482;&#197;&#188;nie
-                    dzia&#197;&#8218;a&#197;&#8218;a w okresie
-                    mi&#196;&#8482;dzywojennym. Wojna
-                    przerwa&#197;&#8218;a funkcjonowanie
-                    zwi&#196;&#8230;zku, lecz zaraz po jej
-                    zako&#197;&#8222;czeniu w 1945r.
-                    dzia&#197;&#8218;acze, kt&#243;rzy
-                    powr&#243;cili do Zak&#197;&#8218;adu utworzyli
-                    ko&#197;&#8218;o &#197;&#8218;owieckie, a 1
-                    stycznia 1946 r. oficjalnie go zarejestrowali
-                    jako Ko&#197;&#8218;o nr 2. W 1957 r.
-                    ko&#197;&#8218;o otrzyma&#197;&#8218;o
-                    nazw&#196;&#8482; "&#197;o&#197;&#8250;", a 30
-                    stycznia 1960 zosta&#197;&#8218;o
-                    zarejestrowane pod numerem 19, zgodnie ze
-                    statutem Polskiego Zwi&#196;&#8230;zku
-                    &#197;owieckiego. Gospodaruje na dw&#243;ch
-                    obwodach nr 63 o powierzchni 6010ha i nr 109 o
-                    powierzchni ca&#197;&#8218;kowitej 7064ha.
-                </p>
-                <p>
-                    Ko&#197;&#8218;o liczy 45
-                    cz&#197;&#8218;onk&#243;w.
-                </p>
+                <p>Serdecznie witamy na stronie Kola Lowieckiego nr 19 Los w Tarnowie wszystkich Koleg&oacute;w Mysliwych i sympatyk&oacute;w lowiectwa.</p>
+                <p>Zalazki powstania kola lowieckiego Los w Tarnowie siegaja roku 1925, kiedy to w Zakladach Zwiazk&oacute;w Azotowych powstala organizacja lowiecka, kt&oacute;ra bardzo preznie dzialala w okresie miedzywojennym. Wojna przerwala funkcjonowanie zwiazku, lecz zaraz po jej zakonczeniu w 1945r. dzialacze, kt&oacute;rzy powr&oacute;cili do Zakladu utworzyli kolo lowieckie, a 1 stycznia 1946 r. oficjalnie go zarejestrowali jako Kolo nr 2. W 1957 r. kolo otrzymalo nazwe "Los", a 30 stycznia 1960 zostalo zarejestrowane pod numerem 19, zgodnie ze statutem Polskiego Zwiazku Lowieckiego. Gospodaruje na dw&oacute;ch obwodach nr 63 o powierzchni 6010ha i nr 109 o powierzchni calkowitej 7064ha.</p>
+                <p>Kolo liczy 45 czlonk&oacute;w.</p>
             </article>
         </div>
     </div>
@@ -114,121 +75,65 @@
 <aside id="aside-second"
     class="aside-second shadow-box">
     <div class="zone zone-aside-second">
-        <article class="widget-aside-second widget-recent-blog-posts widget">
+        <article class="widget">
 
             <header>
-                <h1>Aktualno&#197;&#8250;ci</h1>
+                <h1>Aktualności</h1>
             </header>
+
+
             <ul class="blog-posts content-items">
-                <li class="first">
-                    <article class="content-item blog-post">
-                        <header>
-                            <div class="small-ribbon-wrapper">
-                                <div class="small-ribbon-front">
-                                    <div class="homepageNews">
-                                        <a href="/aktualnosci/prace-na-rzecz-ko&#197;&#8218;a">Prace na rzecz Ko&#197;&#8218;a</a>
+
+                @for (int i = 0; i < Model.Abstracts.Count(); i++)
+                {
+                    string liClass = string.Empty;
+                    if (i == 0)
+                    {
+                        liClass = "first";
+                    }
+                    else if (i == Model.Abstracts.Count() - 1)
+                    {
+                        liClass = "last";
+                    }
+
+                    <li class="@liClass">
+                        <article class="content-item blog-post">
+                            <header>
+                                <div class="small-ribbon-wrapper">
+                                    <div class="small-ribbon-front">
+                                        <div class="homepageNews">
+                                            <a href="/aktualnosci/prace-na-rzecz-ko&#197;&#8218;a">@Model.Abstracts.First().Title</a>
+                                        </div>
+                                    </div>
+                                    <div class="small-ribbon-edge-topright">
+                                    </div>
+                                    <div class="small-ribbon-edge-bottomleft">
+                                    </div>
+                                    <div class="small-ribbon-edge-bottomright">
+                                    </div>
+                                    <div class="small-ribbon-back-left">
+                                    </div>
+                                    <div class="small-ribbon-back-right">
                                     </div>
                                 </div>
-                                <div class="small-ribbon-edge-topright">
-                                </div>
-                                <div class="small-ribbon-edge-bottomleft">
-                                </div>
-                                <div class="small-ribbon-edge-bottomright">
-                                </div>
-                                <div class="small-ribbon-back-left">
-                                </div>
-                                <div class="small-ribbon-back-right">
-                                </div>
-                            </div>
-                        </header>
-                        <p>
-                            W dniu 8 czerwca 2013 w obwodzie nr 109
-                        i 63 organizowane s&#196;&#8230; prace na
-                        rzecz Ko&#197;&#8218;a. Zbi&#243;rki
-                        koleg&#243;w ch&#196;&#8482;tnych do pracy
-                        s&#196;&#8230; o godzinie 8:00, w obwodzie
-                        63 u kolegi Jana Golca, a w
-                        obwodzie&#160;&#8230; 
-                        <a href="/aktualnosci/prace-na-rzecz-ko&#197;&#8218;a">wi&#196;&#8482;cej</a>
-                        </p>
-                    </article>
-                </li>
-                <li>
-                    <article class="content-item blog-post">
-                        <header>
-                            <div class="small-ribbon-wrapper">
-                                <div class="small-ribbon-front">
-                                    <div class="homepageNews">
-                                        <a href="/aktualnosci/praca-na-rzecz-ko&#197;&#8218;a-2">Praca na rzecz Ko&#197;&#8218;a</a>
-                                    </div>
-                                </div>
-                                <div class="small-ribbon-edge-topright">
-                                </div>
-                                <div class="small-ribbon-edge-bottomleft">
-                                </div>
-                                <div class="small-ribbon-edge-bottomright">
-                                </div>
-                                <div class="small-ribbon-back-left">
-                                </div>
-                                <div class="small-ribbon-back-right">
-                                </div>
-                            </div>
-                        </header>
-                        <p>
-                            W dniu 1 czerwca 2013 &#197;owczy
-                        Ko&#197;&#8218;a organizuje prace
-                        gospodarcze i inwestycyjne na rzecz
-                        Ko&#197;&#8218;a. Wszyscy
-                        ch&#196;&#8482;tni do pracy powinni
-                        si&#196;&#8482; skontaktowa&#196;&#8225; z
-                        &#197;owczym w celu uzgodnienia
-                        szczeg&#243;&#197;&#8218;&#243;w. 
-                        <a href="/aktualnosci/praca-na-rzecz-ko&#197;&#8218;a-2">wi&#196;&#8482;cej</a>
-                        </p>
-                    </article>
-                </li>
-                <li class="last">
-                    <article class="content-item blog-post">
-                        <header>
-                            <div class="small-ribbon-wrapper">
-                                <div class="small-ribbon-front">
-                                    <div class="homepageNews">
-                                        <a href="/aktualnosci/trening-strzelecki-2013">Trening strzelecki</a>
-                                    </div>
-                                </div>
-                                <div class="small-ribbon-edge-topright">
-                                </div>
-                                <div class="small-ribbon-edge-bottomleft">
-                                </div>
-                                <div class="small-ribbon-edge-bottomright">
-                                </div>
-                                <div class="small-ribbon-back-left">
-                                </div>
-                                <div class="small-ribbon-back-right">
-                                </div>
-                            </div>
-                        </header>
-                        <p>
-                            Ko&#197;&#8218;o nasze w dniu 25 maja
-                        2013 przeprowadzi&#197;&#8218;o szkolenie
-                        strzeleckie wraz z zawodami o puchar
-                        przechodni Ko&#197;&#8218;a na strzelnicy w
-                        Fiuku. Strzelane by&#197;&#8218;y wszystkie
-                        konkurencje &#197;&#8250;rutowe. Zawody
-                        prowadzone&#160;&#8230; 
-                        <a href="/aktualnosci/trening-strzelecki-2013">wi&#196;&#8482;cej</a>
-                        </p>
-                    </article>
-                </li>
+                            </header>
+                            <p>
+                                @Model.Abstracts.First().Content
+                                <a href="/aktualnosci/prace-na-rzecz-ko&#197;&#8218;a">więcej</a>
+                            </p>
+                        </article>
+                    </li>
+                }
+              
             </ul>
         </article>
-        <article class="widget-aside-second widget-image-gallery-widget widget">
+        <article class="widget">
 
             <header>
                 <h1>Ostatnia galeria</h1>
             </header>
             <div id="slideshow">
-                <img height="188" src="IMG_5036.JPG"
+                <img height="188" src="/Content/pics/IMG_5036.JPG"
                     width="250" />
             </div>
         </article>
