Moving menu into partial

--- a/KoloLos/Views/Main/Index.cshtml
+++ b/KoloLos/Views/Main/Index.cshtml
@@ -18,33 +18,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div id="layout-navigation" class="group">
-                                <div class="zone zone-navigation">
-                                    <nav>
-                                        <ul class="menu menu-main">
-                                            <li class="current">
-                                                <a href="/">Strona główna</a>
-                                            </li>
-                                            <li>
-                                                <a href="/aktualnosci">Aktualności</a>
-                                            </li>
-                                            <li>
-                                                <a href="/uchwaly">Uchwały</a>
-                                            </li>
-                                            <li>
-                                                <a href="/historia">Historia
-                              koła</a>
-                                            </li>
-                                            <li>
-                                                <a href="/Containers/Item/Display/20">Galeria</a>
-                                            </li>
-                                            <li>
-                                                <a href="/kontakt">Kontakt</a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
+                            @Html.Partial("MenuPartial")
                         </div>
                     </div>
                 </header>
