--- a/KoloLos/Views/News/Index.cshtml
+++ b/KoloLos/Views/News/Index.cshtml
@@ -18,34 +18,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div id="layout-navigation" class="group">
-                                <div class="zone zone-navigation">
-                                    <nav>
-                                        <ul class="menu menu-main">
-                                            <li>
-                                                <a href="/">Strona
-                                g&#197;&#8218;&#243;wna</a>
-                                            </li>
-                                            <li class="current">
-                                                <a href="/aktualnosci">Aktualno&#197;&#8250;ci</a>
-                                            </li>
-                                            <li>
-                                                <a href="/uchwaly">Uchwa&#197;&#8218;y</a>
-                                            </li>
-                                            <li>
-                                                <a href="/historia">Historia
-                                ko&#197;&#8218;a</a>
-                                            </li>
-                                            <li>
-                                                <a href="/Containers/Item/Display/20">Galeria</a>
-                                            </li>
-                                            <li>
-                                                <a href="/kontakt">Kontakt</a>
-                                            </li>
-                                        </ul>
-                                    </nav>
-                                </div>
-                            </div>
+                            @Html.Partial("MenuPartial")
                         </div>
                     </div>
                 </header>
