--- a/KoloLos/Views/News/Index.cshtml
+++ b/KoloLos/Views/News/Index.cshtml
@@ -1,94 +1,51 @@
 ﻿@model KoloLos.Models.NewsList
 
 @{
+    Layout = "~/Views/Shared/SingleColumnLayout.cshtml";
     ViewBag.Title = "title";
 }
+@section articleTitle
+{
+    Aktualności
+}
+<ul class="blog-posts content-items">
+    @for (int i = 0; i < Model.ArticleAbstracts.Length; i++)
+    {
 
-<div id="layout-wrapper">
-    <div id="layout-main-container">
-        <div id="layout-main" class="group">
-            <div id="layout-content" class="group shadow-box">
-                <header id="layout-header" class="group">
-                    <div id="header">
-                        <div id="logo">
-                            <div class="zone zone-header">
-                                <div id="branding">
-                                    <a href="./">
-                                        <img src="/Content/pics/logow.png" border="0" />
-                                    </a>
-                                </div>
-                            </div>
-                            @Html.Partial("MenuPartial")
+        string itemClass = i == 0 ? "first" : string.Empty;
+        KoloLos.Models.ArticleAbstract articleAbstract = Model.ArticleAbstracts[i];
+                                    
+        <li class="@itemClass">
+            <article class="content-item blog-post">
+                <header>
+                    <h1>
+                        @Html.ActionLink(articleAbstract.Title, "Details", new { id = articleAbstract.Id }, null)
+                    </h1>
+                    <div class="metadata">
+                        <div class="published">
+                            @articleAbstract.PublishDate
                         </div>
                     </div>
                 </header>
-                <div id="content" class="group">
-                    <div class="zone zone-content">
-                        <article class="content-item blog">
-                            <header>
-                                <div class="ribbon-wrapper">
-                                    <div class="ribbon-front">
-                                        <!-- ribbon text goes here -->
-                                        <div id="articleTitle">
-                                            Aktualności
-                                        </div>
-                                    </div>
-                                    <div class="ribbon-edge-topleft"></div>
-                                    <div class="ribbon-edge-topright"></div>
-                                    <div class="ribbon-edge-bottomleft">
-                                    </div>
-                                    <div class="ribbon-edge-bottomright">
-                                    </div>
-                                    <div class="ribbon-back-left"></div>
-                                    <div class="ribbon-back-right"></div>
-                                </div>
-                            </header>
-                            <ul class="blog-posts content-items">
-                                @for (int i = 0; i < Model.ArticleAbstracts.Length; i++)
-                                {
-
-                                    string itemClass = i == 0 ? "first" : string.Empty;
-                                    KoloLos.Models.ArticleAbstract articleAbstract = Model.ArticleAbstracts[i];
-                                    
-                                    <li class="@itemClass">
-                                        <article class="content-item blog-post">
-                                            <header>
-                                                <h1>
-                                                    @Html.ActionLink(articleAbstract.Title, "Details", new { id = articleAbstract.Id }, null)
-                                                </h1>
-                                                <div class="metadata">
-                                                    <div class="published">
-                                                        @articleAbstract.PublishDate
-                                                    </div>
-                                                </div>
-                                            </header>
-                                            <p>
-                                                @articleAbstract.Abstract
-                                                @Html.ActionLink("więcej", "Details", new { id = articleAbstract.Id }, null)
-                                            </p>
-                                        </article>
-                                    </li>
-                                }
-                                </ul>
-                                <ul class="pager group">
-                                    @if (Model.PreviousPageExists)
-                                    {
-                                        <li>
-                                            @Html.ActionLink("Poprzednie", "Index", new { pageIndex = Model.PreviousPageIndex }, null)
-                                        </li>
-                                    }
-                                    @if (Model.NextPageExists)
-                                    {
-                                        <li>
-                                            @Html.ActionLink("Następne", "Index", new {pageIndex = Model.NextPageIndex}, null)
-                                        </li>
-                                    }
-                                </ul>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+                <p>
+                    @articleAbstract.Abstract
+                    @Html.ActionLink("więcej", "Details", new { id = articleAbstract.Id }, null)
+                </p>
+            </article>
+        </li>
+    }
+</ul>
+<ul class="pager group">
+    @if (Model.PreviousPageExists)
+    {
+        <li>
+            @Html.ActionLink("Poprzednie", "Index", new { pageIndex = Model.PreviousPageIndex }, null)
+        </li>
+    }
+    @if (Model.NextPageExists)
+    {
+        <li>
+            @Html.ActionLink("Następne", "Index", new { pageIndex = Model.NextPageIndex }, null)
+        </li>
+    }
+</ul>
