--- a/KoloLos/Views/Shared/MenuPartial.cshtml
+++ b/KoloLos/Views/Shared/MenuPartial.cshtml
@@ -12,7 +12,7 @@
                     <a href="/uchwaly">Uchwały</a>
                 </li>
                 <li>
-                    <a href="/historia">Historia koła</a>
+                    @Html.ActionLink("Historia koła", "Index", "History")
                 </li>
                 <li>
                     <a href="/Containers/Item/Display/20">Galeria</a>
